<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/img_bg"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:background="@color/darkgrey"
        android:scaleType="fitXY"
        android:contentDescription="@string/background" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="180dp"
            android:orientation="vertical">

            <FrameLayout
                android:id="@+id/frm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="bottom"
                    android:orientation="vertical"
                    android:paddingStart="30dp"
                    android:paddingEnd="5dp">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        app:cardCornerRadius="10dp"
                        app:cardElevation="3dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="130dp"
                            android:orientation="vertical"
                            android:padding="10dp">

                            <TextView
                                android:id="@+id/tvd_name"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/nama"
                                android:textColor="@color/black"
                                android:textSize="22sp"
                                android:textStyle="bold" />
                            <TextView
                                android:id="@+id/riliss"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="4dp"
                                android:text="@string/release"
                                android:textSize="12sp" />

                            <TextView
                                android:id="@+id/tvd_tanggal"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="4dp"
                                android:text="@string/release"
                                android:textSize="12sp" />

                            <RatingBar
                                android:id="@+id/rb_detail"
                                style="@style/Widget.AppCompat.RatingBar.Small"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="8dp"/>

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                </RelativeLayout>

                <androidx.cardview.widget.CardView
                    android:layout_width="150dp"
                    android:layout_height="200dp"
                    android:layout_gravity="start|center"
                    android:layout_marginStart="10dp"
                    android:layout_marginBottom="3dp"
                    android:gravity="center"
                    app:cardBackgroundColor="@color/darkgrey"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="3dp">

                    <ImageView
                        android:id="@+id/imgd_photo"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_horizontal"
                        android:scaleType="fitXY"
                        android:src="@color/grey"
                        android:contentDescription="@string/poster_path" />

                </androidx.cardview.widget.CardView>

            </FrameLayout>
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/overview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/overview"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvd_overview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_gravity="center_vertical|end"
                        android:text="@string/overview" />
                </LinearLayout>
            </ScrollView>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabfav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:contentDescription="@string/favorite"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:src="@drawable/ic_baseline_favorite_border_24"/>
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tb_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
</RelativeLayout>